<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="movieDetails"
                type="com.coral.movietest.models.MovieDetails"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            tools:showIn="@layout/activity_details">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/poster_cv"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="16dp"
                app:layout_constraintDimensionRatio="w,2:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/imageposter_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{movieDetails.movie.posterPath}"/>

        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{movieDetails.movie.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_cv"
                app:layout_constraintTop_toTopOf="@+id/guideline"/>

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:items="@{movieDetails.movie.genres}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/title_tv"
                app:layout_constraintTop_toBottomOf="@+id/title_tv"
                app:visibleGone="@{movieDetails.movie.genres != null}">

        </com.google.android.material.chip.ChipGroup>

        <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="title_tv,chip_group,poster_cv"/>

        <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrier2"/>

        <TextView
                android:id="@+id/label_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_language"
                app:layout_constraintTop_toBottomOf="@+id/text_release_date"/>

        <TextView
                android:id="@+id/text_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_time_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/primaryText"
                android:gravity="center"
                android:text="@{movieDetails.movie.releaseDate}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@+id/label_release_date"
                app:layout_constraintStart_toStartOf="@+id/label_release_date"
                app:layout_constraintTop_toBottomOf="@+id/view_divider"
                tools:text="@tools:sample/date/mmddyy"/>

        <TextView
                android:id="@+id/label_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{@string/votes_string(movieDetails.movie.voteCount)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toStartOf="@+id/label_language"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_vote"/>

        <TextView
                android:id="@+id/text_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_star_24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textColor="@color/primaryText"
                android:text="@{String.valueOf(movieDetails.movie.voteAverage)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@+id/label_vote"
                app:layout_constraintStart_toStartOf="@+id/label_vote"
                app:layout_constraintTop_toTopOf="@+id/text_release_date"
                tools:text="7/10"/>

        <TextView
                android:id="@+id/label_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language_string"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toStartOf="@+id/label_release_date"
                app:layout_constraintStart_toEndOf="@+id/label_vote"
                app:layout_constraintTop_toBottomOf="@+id/text_language"/>

        <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_world_24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textColor="@color/primaryText"
                android:text="@{movieDetails.movie.originalLanguage}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@+id/label_language"
                app:layout_constraintStart_toStartOf="@+id/label_language"
                app:layout_constraintTop_toTopOf="@+id/text_vote"
                tools:text="En"/>

        <View
                android:id="@+id/view_divider_bottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_vote"/>

        <TextView
                android:id="@+id/label_overview"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/overview_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom"/>

        <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:text="@{movieDetails.movie.overview}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_overview"
                tools:text="@tools:sample/lorem"/>

        <TextView
                android:id="@+id/label_cast"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/cast_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_overview"
                app:visibleGone="@{movieDetails.castList.size > 0}"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingEnd="16dp"
                app:items="@{movieDetails.castList}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_cast"
                app:visibleGone="@{movieDetails.castList.size > 0}"/>

        <TextView
                android:id="@+id/label_trailers"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/trailers_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_cast"
                app:visibleGone="@{movieDetails.trailers.size > 0}"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:paddingEnd="16dp"
                app:items="@{movieDetails.trailers}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_trailers"
                app:visibleGone="@{movieDetails.trailers.size > 0}"/>

        <TextView
                android:id="@+id/label_reviews"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/user_reviews_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_trailers"
                app:visibleGone="@{movieDetails.reviews.size > 0}"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clipChildren="false"
                app:items="@{movieDetails.reviews}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_reviews"
                app:visibleGone="@{movieDetails.reviews.size > 0}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>